# scipy-dataclassfitparams

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements_tests.txt  tox.ini
.github/workflows/: tests.yml
coverage/: d_fc1e75f6d3b23c97___init___py.html  d_fc1e75f6d3b23c97__depgraph_py.html  d_fc1e75f6d3b23c97__dump_result_py.html  d_fc1e75f6d3b23c97__fields_py.html  d_fc1e75f6d3b23c97__fit_spec_py.html  d_fc1e75f6d3b23c97__make_fit_py.html  d_fc1e75f6d3b23c97__spec_registry_py.html  d_fc1e75f6d3b23c97__warning_types_py.html  index.html  status.json
src/scipy_dataclassfitparams/: __init__.py  _depgraph.py  _dump_result.py  _fields.py  _fit_spec.py  _make_fit.py  _spec_registry.py  _warning_types.py
tests/: check_readme_examples.py  coverage_postprocessing.py  test__depgraph.py  test__fit_spec.py  test__printing.py  test_fields.py  test_fitting.py
tests/coverage_report_fallback/: index.html
